Add a basic Dfs class for both worker & coordinator